// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginInputField Component renders the LoginInputField having populated props with no errors 1`] = `
<div
  className="field"
>
  <label
    className="label"
    htmlFor="username+Username"
  >
    Username
    :
  </label>
  <div
    className="control is-child"
  >
    <InputField
      data-test="target-name-input"
      name="username"
      onChange={[Function]}
      value=""
    />
  </div>
</div>
`;

exports[`LoginInputField Component renders the LoginInputField having unpopulated props with no errors 1`] = `
<div
  className="field"
>
  <label
    className="label"
    htmlFor="undefined+undefined"
  >
    :
  </label>
  <div
    className="control is-child"
  >
    <InputField
      data-test="target-name-input"
      value=""
    />
  </div>
</div>
`;
